qtermwidget-0.17.0 / 2021-04-15
===============================
  * Drop support for KDE3 color scheme formats.
  * Some code cleanup and modernization.
  * Added a method to disable bracketed paste mode.
  * Added an example for PyQt5.
  * Improve "Undecodable sequence" warnings.
  * Properly implement the "Action after paste" feature.
  * Fix execution after paste when Ctrl is hold.
  * Workaround an issue with glibc 2.33 on old Docker engines.
  * Added modes for background image. How background images are drawn is changed and manual reconfiguration is needed. See docs/configuration.md for more details.

qtermwidget-0.16.1 / 2020-11-14
===============================
  * Bumped version to 0.16.1, for a point release of qterminal.

qtermwidget-0.16.0 / 2020-11-01
===============================

  * Use qAsConst.
  * Don't search application dir for keyboard and scheme data.
  * Use Q_EMIT to call signals, instead of the emit keyword.
  * Dropped the deprecated class QLinkedList.
  * Don't use 0/nullptr to initialize QFlags.
  * Fixed ColorEntry copy operator.
  * Disabled the use of copy constructors and assignment operators.
  * Check for successful ioctl() calls by testing that the call did not return -1.
  * Fix find_package() developer warning in cmake.
  * Use const references wherever possible.
  * Handle keyboard commands properly.

qtermwidget-0.15.0 / 2020-04-24
===============================

  * Bumped version to 0.15.0.
  * Replaced Q_WS_MAC with Q_OS_MACOS for Qt5 compatibility.
  * KPty: Don't conditionalize chownpty existence on HAVE_OPENPTY.
  * cmake: set CMAKE_BUILD_WITH_INSTALL_NAME_DIR ON for macOS.
  * Fixed the default font on macOS.
  * pyqt: Fixes deprecation warning (CMP0002).
  * Fixed the PyQt5 binding with Qt ≥ 5.11.
  * Swap Qt's ControlModifier and MetaModifier on macOS.
  * C++11 code updates.
  * Use braced initializer list in returns.
  * Fixed the memory access violation in TerminalDisplay's method `getCharacterPosition`.